removed distance from bidswon page... corrected column names... changed overflow on table to visible

--- a/LinkingLogsWebApp/wwwroot/css/map.css
+++ b/LinkingLogsWebApp/wwwroot/css/map.css
@@ -6,7 +6,7 @@ html, body {
     height: auto;
     margin: 0;
     padding: 0;
-    overflow:scroll;
+    overflow:visible;
     padding-bottom:65px;
 }
 
